# ros2-diagnostics-example

./: README.md
diagnostics_example/: CMakeLists.txt  package.xml
diagnostics_example/config/: diagnostics.yaml
diagnostics_example/launch/: diagnostics.launch.py  main.launch.py
diagnostics_example/scripts/: aggregator_sub.py  computer_monitor.py
diagnostics_example/src/: diagnostics_example_node.cpp
diagnostics_qt/: CMakeLists.txt  package.xml
diagnostics_qt/include/: mainwindow.h  rclcomm.h
diagnostics_qt/resource/: images.qrc
diagnostics_qt/src/: mainwindow.cpp  rclcomm.cpp
diagnostics_qt/ui/: mainwindow.ui
turtlebot4_diagnostics/config/: diagnostics.yaml
turtlebot4_diagnostics/launch/: diagnostics.launch.py
