<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diagnostics_example</name>
  <version>0.0.0</version>
  <description>diagnostics_example package</description>
  <maintainer email="zulh2605@gmail.com">Zulhafiz Zulkifli</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>diagnostic_updater</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>diagnostic_msgs</depend>

  <depend>irobot_create_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>